fix display on small screens

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  padding: 4rem 2rem;
+  padding: 0 2rem;
   width: 100%;
   min-height: 100vh;
   display: grid;
